--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
 		<title></title>
 		<script>
 
+		function connect() {
 			var exampleSocket = new WebSocket("ws://127.0.0.1:8080");
 
 			exampleSocket.onopen = function (event) {
 				exampleSocket.send(JSON.stringify({event: 'NICK', data:'foo'})); 
 				exampleSocket.send(JSON.stringify({event: 'JOIN', target: '#general'}));
 				exampleSocket.send(JSON.stringify({event: 'MSG', target: '#general', data:'Hai!'}));
+				exampleSocket.send(JSON.stringify({event: 'LISTNICKS', target: '#general'}));
 			};
 
 			exampleSocket.onmessage = function (event) {
 			  console.log(event.data);
 			};
+		}
+
+			connect();
+
+			//setInterval(connect, 3000);
 		</script>
 	</head>
 <body>
